connect to swagger, added more features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ server.port=8090
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=db/master.xml
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+
